# devcontext-mcp

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEBT.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PROJECT.md
examples/: claude_desktop_config.json
src/devcontext_mcp/: __init__.py  config.py  server.py
src/devcontext_mcp/clients/: __init__.py  _http.py  auto_sentinel.py  devdocs.py
src/devcontext_mcp/tools/: __init__.py  analyze_error.py  find_examples.py  get_session_context.py  propose_fix.py  search_codebase.py  search_incidents.py  summarize_pr.py
tests/: test_clients_http.py  test_integration_live.py  test_smoke.py  test_tools.py
